Fixec [h] word break on small screens

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ a:hover { text-decoration: underline }
 [h] {padding: 5rem;font-size: 3rem;margin: 0;color: #fff; background:#085 linear-gradient(20deg, #27c, #085) }
 @media screen and (min-width: 64em) { div { max-width: 64rem; padding: 2rem 6rem }}
 @media screen and (min-width: 42em) and (max-width: 64em) { div { padding: 2rem }[h] { padding: 3rem } }
-@media screen and (max-width: 42em) {[h] { font-size:2rem;padding: 2rem 1rem } div { padding: 1rem} }
+@media screen and (max-width: 42em) {[h] { font-size:2rem;padding: 2rem 0 } div { padding: 1rem} }
 div { word-wrap: break-word; font-size: 1rem }
 div :first-child { margin-top: 0 }
 h1, h2 { margin-bottom: 1rem; font-weight: normal }
